tests/integration/records/errors/quantified-constraints/main.cx
fun g<Rec: {...: String}>(a: Rec) {
}

fun f<Rec: {y: Number, ...: String}>(a: Rec) {
  g(a)
}

fun main() {}
